--- a/Assignment/Assignment.csproj
+++ b/Assignment/Assignment.csproj
@@ -75,6 +75,8 @@
     <Content Include="Home.aspx" />
     <Content Include="Login.aspx" />
     <Content Include="logout.aspx" />
+    <Content Include="Pages\Artist\UploadNewArtwork.aspx" />
+    <Content Include="Pages\Artist\Gallery.aspx" />
     <Content Include="Register.aspx" />
     <Content Include="styles\styleSheet.css" />
     <Content Include="Web.config" />
@@ -125,6 +127,23 @@
     <Compile Include="logout.aspx.designer.cs">
       <DependentUpon>logout.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Pages\Artist\Handler1.ashx.cs">
+      <DependentUpon>Handler1.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Artist\UploadNewArtwork.aspx.cs">
+      <DependentUpon>UploadNewArtwork.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\Artist\UploadNewArtwork.aspx.designer.cs">
+      <DependentUpon>UploadNewArtwork.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Artist\Gallery.aspx.cs">
+      <DependentUpon>Gallery.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\Artist\Gallery.aspx.designer.cs">
+      <DependentUpon>Gallery.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.aspx.cs">
       <DependentUpon>Register.aspx</DependentUpon>
@@ -146,6 +165,7 @@
     <Content Include="MasterPage\Artist.Master" />
     <None Include="packages.config" />
     <Content Include="MasterPage\Site1.Master" />
+    <Content Include="Pages\Artist\Handler1.ashx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
